[gd_scene load_steps=7 format=3 uid="uid://bl3rbuo05r3p4"]

[ext_resource type="Script" path="res://enemies/enemy.gd" id="1_at6va"]
[ext_resource type="Script" path="res://components/move_component.gd" id="1_ryh72"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="2_kuoyj"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="3_ls31g"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="4_8ro32"]
[ext_resource type="Script" path="res://components/shake_component.gd" id="5_llho5"]

[node name="Enemy" type="Node2D"]
script = ExtResource("1_at6va")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("1_ryh72")
actor = NodePath("..")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("2_kuoyj")

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("3_ls31g")
sprite = NodePath("../AnimatedSprite2D")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_8ro32")
sprite = NodePath("../AnimatedSprite2D")

[node name="ShakeComponent" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("5_llho5")
node = NodePath("../AnimatedSprite2D")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
